# tourney-hub-nuxt

./: .gitignore  README.md  nuxt.config.js  ormconfig.ts  package-lock.json  package.json  rustfmt.toml  tsconfig.json
api/: .gitignore  Cargo.toml  Rocket.toml  index.ts  osuapi.ts  passport-osu.ts
api/migrations/: 20211025043313_initial.down.sql  20211025043313_initial.up.sql
api/models/: tournament.ts  user.ts
api/models/migrations/: 1632892190953-initial.ts
api/src/: auth.rs  config.rs  macros.rs  main.rs  utils.rs
api/src-old/: macros.rs  main.rs
api/src-old/utils/: cookies.rs
api/src/routes/: auth.rs  mod.rs  tournaments.rs
api/src/utils/: error.rs  mod.rs  oauth.rs
assets/: styles.css
components/: BadgeText.vue  CardTitle.vue  Footer.vue  IconButton.vue  InlineIcon.vue  Navbar.vue  OsuPfp.vue
components/forms/: CheckBox.vue  Dropdown.vue  NumberInput.vue  Radio.vue  TextInput.vue
layouts/: default.vue  no_top_margin.vue  tourney_config.vue
notes/: ideas.txt  references.txt
pages/: index.vue  standings.vue  tournaments.vue
pages/tournaments/: create.vue  index.vue
pages/tournaments/_id/: index.vue
pages/tournaments/_id/configure/: index.vue
plugins/: flag.ts
store/: actions.ts  users.ts
