[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.44"
tokio = { version = "1.12.0", features = ["full"] }
warp = { version = "0.3.1", features = ["multipart"] }
parking_lot = "0.11.2"
oauth2 = "4.1.0"
stderrlog = "0.5.1"
dotenv = "0.15.0"
rosu-v2 = "0.2.0"
reqwest = { version = "0.11.6", features = ["json"] }
http = "0.2.5"
futures = "0.3.17"
cookie = { version = "0.15.1", features = ["secure", "percent-encode"] }
hex = "0.4.3"
warp-sessions = "1.0.15"
serde = { version = "1.0.130", features = ["derive"] }
thiserror = "1.0.30"

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket"
rev = "e382bc584b478092fdd53eefb9f90ea9c08a6967"
features = ["json", "secrets"]

[dependencies.rocket_db_pools]
git = "https://github.com/SergioBenitez/Rocket"
rev = "e382bc584b478092fdd53eefb9f90ea9c08a6967"
features = ["sqlx_sqlite", "sqlx_macros"]

[dependencies.sqlx]
version = "0.5.9"
features = ["json", "runtime-tokio-rustls", "sqlite"]

[features]
